test-kafka-operator/deploy/config/base/webhook/manifests.yaml

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURiRENDQWxTZ0F3SUJBZ0lVZDQwVTlpN0YweHNZNjJPMVFnVW9tQ0tEenNVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1RqRUxNQWtHQTFVRUJoTUNWVk14RGpBTUJnTlZCQW9UQld0aFptdGhNUzh3TFFZRFZRUURFeVpyWVdacgpZUzFvWldGa2JHVnpjeTVyWVdacllTNXpkbU11WTJ4MWMzUmxjaTVzYjJOaGJEQWVGdzB4T1RBM016RXhORFUzCk1EQmFGdzB5T1RBM01qZ3hORFUzTURCYU1FNHhDekFKQmdOVkJBWVRBbFZUTVE0d0RBWURWUVFLRXdWcllXWnIKWVRFdk1DMEdBMVVFQXhNbWEyRm1hMkV0YUdWaFpHeGxjM011YTJGbWEyRXVjM1pqTG1Oc2RYTjBaWEl1Ykc5agpZV3d3Z2dFaU1BME [...]
    service:
      name: webhook-service
      namespace: system
      path: /validate
  failurePolicy: Fail
  name: kafkatopics.kafka.banzaicloud.io
  rules:
  - apiGroups:
    - kafka.banzaicloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kafkatopics
  sideEffects: None
